--- a/app/src/main/res/layout/categories_gridview.xml
+++ b/app/src/main/res/layout/categories_gridview.xml
@@ -8,13 +8,10 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="est"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<GridView
+    android:id="@+id/gridview_categories"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:numColumns="2"/>
 
 </android.support.constraint.ConstraintLayout>
