--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/logoBlueBookColor">
 
     <ImageView
         android:id="@+id/imageview_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:src="@drawable/ic_home"/>
+        tools:src="@drawable/ic_home"
+        style="@style/ConstraintCenter"/>
+
+    <TextView
+        android:id="@+id/textview_category_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Work"
+        app:layout_constraintTop_toBottomOf="@id/imageview_category"
+        style="@style/ConstraintCenterHorizontal"/>
 
 </android.support.constraint.ConstraintLayout>
