--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/categories_gridview" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/gridview_categories"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
