style: added a boarder around categories
- added a board, but needs work

--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    android:id="@+id/constrain_layout_add_category"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constrain_layout_add_category"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".AddCategory">
 
     <TextView
+        android:id="@+id/textview_new_cat_label"
+        style="@style/ConstraintCenterHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="@string/add_a_new_category"
-        style="@style/ConstraintCenterHorizontal"/>
+        android:textSize="28sp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editText_category_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/category_name"
+        android:inputType="textCapSentences"
+        app:layout_constraintTop_toBottomOf="@id/textview_new_cat_label" />
+
+    <Button
+        android:id="@+id/button_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        app:layout_constraintTop_toBottomOf="@id/editText_category_name"/>
 
 </android.support.constraint.ConstraintLayout>
