--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <GridView
         android:id="@+id/gridview_categories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
