CHANGE: from firebase to roomdatabase
- changed storing info to room database instead of firebase.

- Firebase will be used to share info at a later date

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <GridView
-        android:id="@+id/gridview_categories"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_categories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="2"
