--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".AddCategory">
+    tools:context=".Categories.AddCategory">
 
     <TextView
         android:id="@+id/textview_new_cat_label"
