--- a/app/src/main/res/layout/list_of_sops.xml
+++ b/app/src/main/res/layout/list_of_sops.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListofSOPs">
+    tools:context=".ListofSOPs.ListofSOPs">
 
     <TextView
         android:id="@+id/listsop_categorytitle"
