--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -4,6 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:layout_margin="8dp"
+    android:elevation="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/category_border">
