--- a/app/src/main/res/layout/list_of_sops.xml
+++ b/app/src/main/res/layout/list_of_sops.xml
@@ -10,8 +10,14 @@
         android:id="@+id/listsop_categorytitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="test"
+        android:text="List of SOPs"
         style="@style/ConstraintCenterHorizontal"
         android:textSize="28sp"/>
+    
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_list_of_sops"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/listsop_categorytitle"/>
 
 </android.support.constraint.ConstraintLayout>
