--- a/app/src/main/res/layout/list_of_sops.xml
+++ b/app/src/main/res/layout/list_of_sops.xml
@@ -20,4 +20,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/listsop_categorytitle"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_addsop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_action_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
 </android.support.constraint.ConstraintLayout>
