--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:id="@+id/recyclerview_categories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="6dp"
         android:numColumns="2"
         app:layout_constraintTop_toBottomOf="@id/tool"/>
 
