--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -4,25 +4,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="8dp"
+    android:layout_margin="6dp"
     android:elevation="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/category_border">
 
-    <ImageView
-        android:id="@+id/imageview_category"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        tools:src="@drawable/ic_home"
-        style="@style/ConstraintCenter"/>
+    <!--<ImageView-->
+        <!--android:id="@+id/imageview_category"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--tools:src="@drawable/ic_home"-->
+        <!--style="@style/ConstraintCenter"/>-->
 
     <TextView
         android:id="@+id/textview_category_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Work"
-        app:layout_constraintTop_toBottomOf="@id/imageview_category"
-        style="@style/ConstraintCenterHorizontal"/>
+        android:textSize="32sp"
+        android:textStyle="bold"
+        style="@style/ConstraintCenter"/>
 
 </android.support.constraint.ConstraintLayout>
