feat: Added steps page, removed number of steps, XML layout for step
- From SOP title it goes to add step activity. no action yet.

- also removed number of steps from SOP roomdata

- created XML layout for add step

--- a/app/src/main/res/layout/add_sop.xml
+++ b/app/src/main/res/layout/add_sop.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp">
 
     <TextView
@@ -21,21 +22,13 @@
         android:hint="SOP Title"
         app:layout_constraintTop_toBottomOf="@id/textview_new_sop_label"/>
 
-    <EditText
-        android:id="@+id/edittext_add_numberof_steps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/ConstraintCenterHorizontal"
-        android:inputType="number"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/edittext_add_sop_title"
-        android:hint="Number of steps"/>
 
     <Button
-        android:id="@+id/button_add_sop_save"
+        android:id="@+id/button_add_sop_add_step"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/edittext_add_numberof_steps"
-        android:text="Save SOP"/>
+        android:text="add step"
+        app:layout_constraintTop_toBottomOf="@id/edittext_add_sop_title" />
+
 
 </android.support.constraint.ConstraintLayout>
