--- a/app/src/main/res/layout/add_step.xml
+++ b/app/src/main/res/layout/add_step.xml
@@ -7,47 +7,45 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/textview_new_sop_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create a new SOP"
-        android:textSize="21sp"
-        style="@style/ConstraintCenterHorizontal"/>
-
-    <TextView
         android:id="@+id/textview_add_sop_step_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="step 1"
-        android:textSize="18sp"
-        style="@style/ConstraintCenterHorizontal"
-        app:layout_constraintTop_toBottomOf="@id/textview_new_sop_label"/>
+        android:padding="8dp"
+        android:textSize="21sp"
+        style="@style/ConstraintCenterHorizontal"/>
 
     <EditText
-        android:id="@+id/edittext_add_sop_title"
+        android:id="@+id/edittext_add_step_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:hint="Step Title"
         android:inputType="text"
-        android:hint="SOP Title"
-        app:layout_constraintTop_toBottomOf="@id/textview_add_sop_step_count"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_add_sop_step_count" />
 
 
     <Button
         android:id="@+id/button_add_sop_another_step"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="add another step"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/button_add_sop_save"
-        app:layout_constraintTop_toTopOf="@id/button_add_sop_save" />
+        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_title" />
 
     <Button
         android:id="@+id/button_add_sop_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Complete SOP"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/button_add_sop_another_step"
-        app:layout_constraintTop_toBottomOf="@id/edittext_add_sop_title" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_title" />
 
 </android.support.constraint.ConstraintLayout>
