--- a/app/src/main/res/layout/list_of_steps.xml
+++ b/app/src/main/res/layout/list_of_steps.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/textview_list_steps_title"
@@ -11,5 +12,11 @@
         tools:text="Check air pressure"
         style="@style/ConstraintCenterHorizontal"
         android:textSize="28sp"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_list_of_steps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/textview_list_steps_title"/>
 
 </android.support.constraint.ConstraintLayout>
