Style: Added descritpion box and images for photos
-In add_step.XML added descritpion box and image of camera and gallery logo.

--- a/app/src/main/res/layout/add_step.xml
+++ b/app/src/main/res/layout/add_step.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="16dp">
 
     <TextView
         android:id="@+id/textview_add_sop_step_count"
+        style="@style/ConstraintCenterHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="step 1"
         android:padding="8dp"
         android:textSize="21sp"
-        style="@style/ConstraintCenterHorizontal"/>
+        tools:text="step 1" />
 
     <EditText
         android:id="@+id/edittext_add_step_title"
@@ -27,6 +27,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_add_sop_step_count" />
 
+    <TextView
+        android:id="@+id/textview_add_step_add_image_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="12dp"
+        android:text="Add Image"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/edittext_add_step_title" />
+
+    <ImageView
+        android:id="@+id/imageview_add_step_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:src="@drawable/ic_photo_camera"
+        app:layout_constraintLeft_toRightOf="@id/textview_add_step_add_image_label"
+        app:layout_constraintTop_toBottomOf="@id/edittext_add_step_title" />
+
+    <ImageView
+        android:id="@+id/imageview_add_step_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:src="@drawable/ic_image"
+        app:layout_constraintLeft_toRightOf="@id/imageview_add_step_camera"
+        app:layout_constraintTop_toTopOf="@id/imageview_add_step_camera" />
+
+    <EditText
+        android:id="@+id/edittext_add_step_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top|left"
+        android:inputType="textMultiLine"
+        android:maxLines="10"
+        android:padding="6dp"
+        android:background="@drawable/description_border"
+        android:scrollbars="vertical"
+        android:hint="Add description of step"
+        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_camera"/>
 
     <Button
         android:id="@+id/button_add_sop_another_step"
@@ -36,7 +75,7 @@
         android:text="add another step"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/button_add_sop_save"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_title" />
+        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_description" />
 
     <Button
         android:id="@+id/button_add_sop_save"
@@ -46,6 +85,6 @@
         android:text="Complete SOP"
         app:layout_constraintLeft_toRightOf="@id/button_add_sop_another_step"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_title" />
+        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_description" />
 
 </android.support.constraint.ConstraintLayout>
