--- a/app/src/main/res/layout/add_step.xml
+++ b/app/src/main/res/layout/add_step.xml
@@ -54,6 +54,15 @@
         app:layout_constraintLeft_toRightOf="@id/imageview_add_step_camera"
         app:layout_constraintTop_toTopOf="@id/imageview_add_step_camera" />
 
+    <ImageView
+        android:id="@+id/imageview_add_step_image_preview"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_margin="6dp"
+        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_gallery"
+        android:visibility="gone"
+        style="@style/ConstraintCenterHorizontal"/>
+
     <EditText
         android:id="@+id/edittext_add_step_description"
         android:layout_width="match_parent"
@@ -61,11 +70,12 @@
         android:gravity="top|left"
         android:inputType="textMultiLine"
         android:maxLines="10"
+        android:layout_marginTop="8dp"
         android:padding="6dp"
         android:background="@drawable/description_border"
         android:scrollbars="vertical"
         android:hint="Add description of step"
-        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_camera"/>
+        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_image_preview"/>
 
     <Button
         android:id="@+id/button_add_sop_another_step"
