--- a/app/src/main/res/layout/list_of_steps_layout.xml
+++ b/app/src/main/res/layout/list_of_steps_layout.xml
@@ -10,31 +10,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textview_step_number"
+        android:id="@+id/textview_step_list_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="32sp"
         tools:text="1"/>
 
     <TextView
-        android:id="@+id/textview_step_title"
+        android:id="@+id/textview_step_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="This is a sample of a step title"
-        app:layout_constraintLeft_toRightOf="@id/textview_step_number"
+        app:layout_constraintLeft_toRightOf="@id/textview_step_list_number"
         android:paddingLeft="8dp"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        style="@style/ConstraintCenterVertical"/>
 
-    <ImageView
-        android:id="@+id/imageview_list_steps_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/textview_step_title"/>
-
-    <TextView
-        android:id="@+id/textview_list_steps_description"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        app:layout_constraintLeft_toRightOf="@id/imageview_list_steps_image"/>
 
 </android.support.constraint.ConstraintLayout>
