--- a/app/src/main/res/layout/list_of_steps.xml
+++ b/app/src/main/res/layout/list_of_steps.xml
@@ -19,4 +19,13 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/textview_list_steps_title"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_list_steps_add_step"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/ic_action_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
