--- a/app/src/main/res/layout/add_step.xml
+++ b/app/src/main/res/layout/add_step.xml
@@ -97,4 +97,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_description" />
 
+    <Button
+        android:id="@+id/button_add_step_save_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save step"
+        android:layout_margin="16dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/edittext_add_step_description"/>
+
 </android.support.constraint.ConstraintLayout>
