--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    android:id="@+id/constrantlayout_category"
+<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_margin="6dp"
     android:elevation="8dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/category_border">
+    android:id="@+id/constrantlayout_category">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/imageview_category"-->
-        <!--android:layout_width="100dp"-->
-        <!--android:layout_height="100dp"-->
-        <!--tools:src="@drawable/ic_home"-->
-        <!--style="@style/ConstraintCenter"/>-->
+    <ImageView
+        android:id="@+id/imageview_category"
+        style="@style/ConstraintCenter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/folderpng"/>
 
     <TextView
         android:id="@+id/textview_category_title"
