--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -34,4 +34,13 @@
         android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@id/imageview_step_picture"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_step_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/ic_action_edit"/>
+
 </android.support.constraint.ConstraintLayout>
