--- a/app/src/main/res/layout/list_sops_layout.xml
+++ b/app/src/main/res/layout/list_sops_layout.xml
@@ -4,7 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/category_border"
     android:layout_margin="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="6dp"
@@ -28,6 +27,12 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toRightOf="@id/textview_list_sops_number_of_steps"
         style="@style/ConstraintCenterVertical"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintBottom_toBottomOf="@id/constrain_layout_list_of_sop_layout"/>
     
 
 </android.support.constraint.ConstraintLayout>
