--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5FBFF9</color>
-    <color name="colorPrimaryDark">#5863F8</color>
-    <color name="colorAccent">#16BAC5</color>
+    <color name="colorPrimary">#799BD1</color>
+    <color name="colorPrimaryDark">#4F8A98</color>
+    <color name="colorAccent">#E5777D</color>
 
     <!--COLORS OF THE LOGO-->
     <color name="logoBlueBookColor">#4DA5B9</color>
