--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="mysop.pia.com.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/edit_category"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Edit Cat"
         app:showAsAction="never" />
+
+    <!--todo: making category editable-->
 </menu>
