--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/category_name"
+        android:maxLength="11"
         android:inputType="textCapSentences"
         app:layout_constraintTop_toBottomOf="@id/textview_new_cat_label" />
 
