--- a/app/src/main/res/layout/add_sop.xml
+++ b/app/src/main/res/layout/add_sop.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp">
 
     <TextView
@@ -22,13 +21,19 @@
         android:hint="SOP Title"
         app:layout_constraintTop_toBottomOf="@id/textview_new_sop_label"/>
 
+    <EditText
+        android:id="@+id/edittext_sop_description"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        app:layout_constraintTop_toBottomOf="@id/edittext_add_sop_title"/>
 
     <Button
         android:id="@+id/button_add_sop_add_step"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="add step"
-        app:layout_constraintTop_toBottomOf="@id/edittext_add_sop_title" />
+        android:background="@drawable/description_border"
+        app:layout_constraintTop_toBottomOf="@id/edittext_sop_description" />
 
 
 </android.support.constraint.ConstraintLayout>
