--- a/app/src/main/res/layout/add_sop.xml
+++ b/app/src/main/res/layout/add_sop.xml
@@ -36,9 +36,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="add step"
-        android:background="@drawable/description_border"
         android:layout_margin="4dp"
         app:layout_constraintTop_toBottomOf="@id/edittext_sop_description" />
+
+    <Button
+        android:id="@+id/button_edit_sop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:text="save SOP"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/edittext_sop_description"/>
 
 
 </android.support.constraint.ConstraintLayout>
