--- a/app/src/main/res/layout/firebase.xml
+++ b/app/src/main/res/layout/firebase.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="16dp">
 
     <TextView
         android:id="@+id/label"
@@ -12,11 +13,33 @@
         android:text="FireBase"
         android:textSize="32sp"/>
 
+    <EditText
+        android:id="@+id/edittext_firebase_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="UserName"
+        app:layout_constraintTop_toBottomOf="@id/label"/>
+
+    <EditText
+        android:id="@+id/edittext_firebase_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email"
+        app:layout_constraintTop_toBottomOf="@id/edittext_firebase_username"/>
+
+    <EditText
+        android:id="@+id/edittext_firebase_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@id/edittext_firebase_email"/>
+
     <Button
         android:id="@+id/button_share"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="share"
-        app:layout_constraintTop_toBottomOf="@id/label"/>
+        android:text="Create account"
+        app:layout_constraintTop_toBottomOf="@id/edittext_firebase_password"/>
 
 </android.support.constraint.ConstraintLayout>
