--- a/app/src/main/res/layout/fragment_category_options.xml
+++ b/app/src/main/res/layout/fragment_category_options.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/logoBlueBookColor"
+    android:background="@drawable/radius_corners"
     android:padding="16dp"
     tools:context=".Categories.CategoryOptionsFrag">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -47,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:src="@drawable/ic_home" />
+                android:src="@drawable/ic_delete_forever" />
 
         </LinearLayout>
     </LinearLayout>
