--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -2,47 +2,43 @@
 <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="6dp"
+    android:layout_margin="8dp"
     android:elevation="8dp"
+    android:background="@drawable/elevation"
     android:id="@+id/constrantlayout_category">
 
     <ImageView
         android:id="@+id/imageview_category"
-        style="@style/ConstraintCenter"
+        style="@style/ConstraintCenterHorizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/folderpng"/>
+        android:padding="12dp"
+        android:src="@drawable/bookshelf"/>
 
     <TextView
         android:id="@+id/textview_category_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:maxLines="1"
         tools:text="Work"
-        android:textSize="32sp"
+        android:paddingBottom="12dp"
         android:textStyle="bold"
-        style="@style/ConstraintCenter"/>
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintWidth_percent=".90"/>
 
     <ImageView
-        android:id="@+id/imageview_cat_shared"
+        android:id="@+id/imageview_cat_options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_action_share"
-        android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="@id/textview_category_title"
-        app:layout_constraintTop_toBottomOf="@id/textview_category_title"/>
+        android:padding="6dp"
+        android:src="@drawable/ic_action_overflow"
+        app:layout_constraintRight_toRightOf="parent"/>
 
-    <TextView
-        android:id="@+id/textview_cat_shared_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/imageview_cat_shared"
-        app:layout_constraintLeft_toRightOf="@id/imageview_cat_shared"
-        app:layout_constraintRight_toRightOf="@id/textview_category_title"
-        app:layout_constraintTop_toTopOf="@id/imageview_cat_shared"
-        tools:text="phil"/>
 
 </android.support.constraint.ConstraintLayout>
