--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/tool"
@@ -22,54 +23,67 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_categories"
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="6dp"
-        android:numColumns="2"
-        app:layout_constraintTop_toBottomOf="@id/tool"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_action_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="6dp">
 
-    <ImageView
-        android:id="@+id/imageview_sop_logo_no_categories"
-        style="@style/ConstraintCenter"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/mysop_logo"
-        android:visibility="gone"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_categories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="2"/>
 
-    <TextView
-        android:id="@+id/textview_no_categories"
-        style="@style/ConstraintCenterHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create a Category File"
-        android:textSize="21sp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/imageview_sop_logo_no_categories"/>
-    
-    <FrameLayout
-        android:id="@+id/framelayout_category_options_frag"
-        style="@style/ConstraintCenterHorizontal"
-        android:layout_width="300dp"
-        android:layout_height="400dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/guideline"/>
+        </ScrollView>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"/>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@drawable/ic_action_add" />
 
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageview_sop_logo_no_categories"
+            style="@style/ConstraintCenter"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/mysop_logo"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/textview_no_categories"
+            style="@style/ConstraintCenterHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create a Category File"
+            android:textSize="21sp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/imageview_sop_logo_no_categories" />
+
+        <FrameLayout
+            android:id="@+id/framelayout_category_options_frag"
+            style="@style/ConstraintCenterHorizontal"
+            android:layout_width="300dp"
+            android:layout_height="400dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/guideline" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.8" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
