--- a/app/src/main/res/layout/categories_layout.xml
+++ b/app/src/main/res/layout/categories_layout.xml
@@ -12,10 +12,12 @@
     <ImageView
         android:id="@+id/imageview_category"
         style="@style/ConstraintCenterHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="12dp"
-        android:src="@drawable/bookshelf"/>
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="6dp"
+        android:src="@drawable/bookshelfedit"/>
 
     <TextView
         android:id="@+id/textview_category_title"
@@ -27,16 +29,17 @@
         android:paddingBottom="12dp"
         android:textStyle="bold"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        style="@style/ConstraintCenterHorizontal"
+        app:layout_constraintTop_toBottomOf="@id/imageview_category"
         app:layout_constraintWidth_percent=".90"/>
 
     <ImageView
         android:id="@+id/imageview_cat_options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="6dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="12dp"
+        android:paddingTop="4dp"
         android:src="@drawable/ic_action_overflow"
         app:layout_constraintRight_toRightOf="parent"/>
 
