--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -22,9 +22,8 @@
         android:id="@+id/editText_category_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/category_name"
-        android:maxLength="11"
         android:inputType="textCapSentences"
+        android:hint="Book Shelf Name"
         app:layout_constraintTop_toBottomOf="@id/textview_new_cat_label" />
 
     <Button
