Style: Created new layout for list of books

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="logoYellowBookColor">#FBD741</color>
     <color name="logoRedBookColor">#DA4343</color>
 
+    <color name="text">#1d1d1d</color>
+
 </resources>
