--- a/app/src/main/res/layout/list_of_sops.xml
+++ b/app/src/main/res/layout/list_of_sops.xml
@@ -18,6 +18,7 @@
         android:id="@+id/recyclerview_list_of_sops"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         app:layout_constraintTop_toBottomOf="@id/listsop_categorytitle"/>
 
     <android.support.design.widget.FloatingActionButton
