--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,11 +73,14 @@
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/imageview_sop_logo_no_categories"
             tools:text="Create a book shelf to organize your Handbooks"/>
+
         <FrameLayout
             android:id="@+id/framelayout_category_options_frag"
-            style="@style/ConstraintCenterHorizontal"
-            android:layout_width="300dp"
-            android:layout_height="400dp"
+            style="@style/ConstraintCenter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="18dp"
+            android:elevation="12dp"
             android:visibility="gone"/>
 
 
