--- a/app/src/main/res/layout/add_shelf.xml
+++ b/app/src/main/res/layout/add_shelf.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constrain_layout_add_category"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="16dp"
+    android:background="@drawable/radius_corners"
     tools:context=".Categories.AddCategory">
 
     <TextView
@@ -14,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/add_a_new_category"
+        android:text="Create a book Shelf"
         android:textSize="28sp"
         app:layout_constraintTop_toTopOf="parent" />
 
