--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="logoGreenBookColor">#41A85E</color>
     <color name="logoYellowBookColor">#FBD741</color>
     <color name="logoRedBookColor">#DA4343</color>
+    <color name="logoOrangeBookColor">#fc9c26</color>
 
     <color name="text">#1d1d1d</color>
 
