--- a/app/src/main/res/layout/list_of_steps_layout.xml
+++ b/app/src/main/res/layout/list_of_steps_layout.xml
@@ -13,16 +13,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="32sp"
-        tools:text="1..."/>
+        tools:text="1.."/>
 
     <TextView
         android:id="@+id/textview_step_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="This is a sample of a step title"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toRightOf="@id/textview_step_list_number"
         android:paddingLeft="8dp"
-        android:textSize="18sp"
+        android:textSize="21sp"
         style="@style/ConstraintCenterVertical"/>
 
     <ImageView
