Widget feat: added widget, no data yet

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,10 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="mysop.pia.com.MainActivity">
+
     <item
         android:id="@+id/sign_in"
         android:orderInCategory="100"
         android:title="Sign in"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/widget"
+        android:orderInCategory="100"
+        android:title="Add to Widget"
         app:showAsAction="never" />
 
 </menu>
