--- a/app/src/main/res/layout/list_of_steps.xml
+++ b/app/src/main/res/layout/list_of_steps.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="6dp"
+        android:layout_margin="6dp"
         android:src="@drawable/ic_action_overflow"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
