Refactored names of files to reflect app name change

--- a/app/src/main/res/layout/list_of_sops.xml
+++ b/app/src/main/res/layout/list_of_sops.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListofSOPs.ListofSOPs">
+    tools:context=".ListofHandbooks.ListofHandbooks">
 
     
     <android.support.v7.widget.RecyclerView
