--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -11,7 +11,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".Steps.StepActivity"
+    tools:context=".Pages.PageActivity"
     android:padding="8dp">
 
     <!--THINGS I WANT TO SHOW (STEP TITLE, PICTURE, DESCRIPTION, STEP NUMBER-->
