--- a/app/src/main/res/layout/add_shelf.xml
+++ b/app/src/main/res/layout/add_shelf.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".Categories.AddCategory">
+    tools:context=".Categories.AddShelf">
 
     <TextView
         android:id="@+id/textview_new_cat_label"
