--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
             android:layout_margin="@dimen/fab_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@drawable/ic_action_add" />
+            android:contentDescription="@string/add_book_shelf"
+            app:srcCompat="@drawable/ic_action_add"/>
 
         <ImageView
             android:id="@+id/imageview_sop_logo_no_categories"
