--- a/app/src/main/res/layout/list_of_steps.xml
+++ b/app/src/main/res/layout/list_of_steps.xml
@@ -59,6 +59,7 @@
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_action_add"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/add_page"
         app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
